# melin

./: .gitignore  CLA.md  CLAUDE.md  CODE_SMELLS.md  Cargo.toml  Dockerfile  LICENSE  README.md  authorized_keys  clippy.toml  ops.key  ops.pub  plan.md
crates/admin/: Cargo.toml
crates/admin/src/: keygen.rs  main.rs  promote.rs
crates/bench/: Cargo.toml  README.md
crates/bench/src/: dpdk.rs  generator.rs  health_poller.rs  journal_writer_bench.rs  main.rs  plot.rs  rumcast.rs  stats_client.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  rumcast.rs  tcp.rs
crates/core/app/: Cargo.toml
crates/core/app/src/: affinity.rs  amortized_timer.rs  app_factory.rs  auth.rs  decoder.rs  encoder.rs  lib.rs
crates/core/disruptor/: Cargo.toml
crates/core/disruptor/examples/: false_sharing.rs
crates/core/pipeline/: Cargo.toml
crates/core/pipeline/examples/: false_sharing.rs
crates/core/pipeline/src/: lib.rs  padding.rs  ring.rs  spsc.rs
crates/core/raft/: Cargo.toml
crates/core/raft/src/: lib.rs  node.rs  recency.rs  slog_bridge.rs  storage.rs  wire.rs
crates/core/server-runtime/: Cargo.toml
crates/core/server-runtime/src/: admin.rs  client_frames.rs  dpdk_response.rs  dpdk_transport.rs  lib.rs  process.rs  raft_driver.rs  reader.rs  response.rs  server.rs
crates/core/server-runtime/src/replication/: auth.rs  dpdk.rs  mod.rs  receiver_transport.rs  tcp_receiver.rs  tcp_sender.rs
crates/core/transport-core/: Cargo.toml
crates/core/transport-core/src/: cursors.rs  durability_policy.rs  fence.rs  health.rs  journaled_app.rs  lib.rs  pipeline.rs  pipeline_tests.rs  replication_wire.rs  shadow.rs  snapshot.rs  test_support.rs  tick.rs
crates/core/transport-core/src/replication/: ack_queue.rs  catchup.rs  cursors.rs  handoff_test.rs  metrics.rs  mod.rs  protocol.rs  sent.rs
crates/core/wire-protocol/: Cargo.toml
crates/core/wire-protocol/src/: control.rs  control_codec.rs  lib.rs
crates/dpdk/: Cargo.toml  build.rs
crates/dpdk/src/: device.rs  ffi.rs  inline_wrappers.c  lib.rs  mempool.rs  port.rs  transport.rs
crates/dpdk/src/dpdk/: device.rs  inline_wrappers.c  port.rs  transport.rs
crates/engine/: Cargo.toml
crates/engine/examples/: journal_verify.rs
crates/engine/src/: account.rs  application_impl.rs  exchange.rs  fuzz_tests.rs  le.rs  lib.rs  orderbook.rs  proptests.rs  scheduler.rs  trading_event.rs  types.rs
crates/engine/src/journal/: codec.rs  engine.rs  error.rs  event.rs  halt_tests.rs  mod.rs  pipeline.rs  pipeline_tests.rs  reader.rs  replication.rs  snapshot.rs  trace.rs  writer.rs
crates/exchange/admin/: Cargo.toml
crates/exchange/admin/src/: main.rs  promote.rs
crates/exchange/bench/: Cargo.toml
crates/exchange/bench/src/: dpdk.rs  generator.rs  health_poller.rs  journal_writer_bench.rs  keys.rs  lib.rs  main.rs  plot.rs
crates/exchange/bench/src/calibration/: fixture.rs  generator_adapter.rs  mod.rs  stats.rs
crates/exchange/client/: Cargo.toml
crates/exchange/client/src/: tcp.rs
crates/exchange/engine/: Cargo.toml
crates/exchange/engine/src/: application_impl.rs  exchange.rs  exchange_tests.rs  fuzz_tests.rs  lib.rs  orderbook.rs  slab_map.rs  snapshot.rs  types.rs
crates/exchange/engine/src/exchange/: instrument.rs  open_order_cap_tests.rs  token_bucket.rs
crates/exchange/engine/src/journal/: halt_tests.rs  mod.rs  snapshot.rs  (+1 more)
crates/exchange/exchange-core/: Cargo.toml
crates/exchange/exchange-core/src/: account.rs  exchange.rs  scheduler.rs  snapshot.rs
crates/exchange/gateway-core/: Cargo.toml
crates/fix-gateway/: Cargo.toml
crates/fix-gateway/src/: config.rs  event_loop.rs  id_map.rs  main.rs  price.rs  session.rs  test_stub.rs  translate.rs
crates/fix-gateway/src/fix/: checksum.rs  parse.rs  serialize.rs  tags.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  main.rs  proxy.rs
crates/journal/: Cargo.toml
crates/journal/src/: buffered_writer.rs  codec.rs  error.rs  event.rs  fresh_replica.rs  journal_writer.rs  le.rs  lib.rs  mode.rs  prealloc.rs  preparer.rs  reader.rs  replication.rs  sector_writer.rs  segment.rs  test_utils.rs  trace.rs  write.rs  writer.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: cold_start.rs  core.rs  index.rs  lib.rs  mirror.rs  proptests.rs  subscriber.rs  trade_ring.rs
crates/md-gateway/: Cargo.toml
crates/md-gateway/src/: config.rs  event_loop.rs  main.rs  translate.rs
crates/noop/: Cargo.toml
crates/noop/src/: lib.rs
crates/noop/tests/: pipeline.rs
crates/oe-gateway/: Cargo.toml
crates/oe-gateway/src/: config.rs  event_loop.rs  id_map.rs  main.rs  metrics.rs  price.rs  session.rs  test_stub.rs  translate.rs
crates/oe-gateway/src/fix/: checksum.rs  parse.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: auth.rs  blocking.rs  codec.rs  fuzz_tests.rs  lib.rs  message.rs  session.rs  tcp.rs  transport.rs  uds.rs
crates/protocol/tests/: fuzz.rs
crates/rumcast/: Cargo.toml
crates/rumcast/examples/: bench_unicast.rs
crates/rumcast/src/: counters.rs  flow_control.rs  io_uring_endpoint.rs  io_uring_udp.rs  lib.rs  muxed_receiver.rs  muxed_sender.rs  pub_log.rs  receiver.rs  sender.rs  shared_udp.rs  spsc.rs  storage.rs  sub_log.rs  transport.rs  wire.rs
crates/rumcast/tests/: end_to_end.rs
crates/server/: Cargo.toml
crates/server/src/: admin.rs  affinity.rs  amortized_timer.rs  dpdk_response.rs  dpdk_transport.rs  durability_policy.rs  engine.rs  event_publisher.rs  health.rs  lib.rs  main.rs  promote.rs  reader.rs  replication.rs  request.rs  response.rs  rotate.rs  rumcast_transport.rs  server.rs  server_noop.rs  session.rs  shadow.rs  tick.rs  uring_reader.rs  uring_response.rs
crates/server/src/replication/: catchup.rs  dpdk.rs  mod.rs  protocol.rs  rumcast_receiver.rs  rumcast_sender.rs  tcp_receiver.rs  tcp_sender.rs
crates/server/tests/: failover.rs  rumcast_replication_smoke.rs  rumcast_smoke.rs
crates/transport-core/: Cargo.toml
crates/transport-core/src/: journaled_app.rs  lib.rs  pipeline.rs  pipeline_tests.rs  replication_wire.rs  snapshot.rs  test_support.rs  trace.rs
(+226 files in other folders)
