[package]
name = "trading-admin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trading-admin"
path = "src/main.rs"

[[bin]]
name = "trading-keygen"
path = "src/keygen.rs"

[dependencies]
trading-client = { path = "../client" }
trading-protocol = { path = "../protocol" }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
