[package]
name = "melin-admin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "melin-admin"
path = "src/main.rs"

[[bin]]
name = "melin-keygen"
path = "src/keygen.rs"

[dependencies]
melin-client = { path = "../client" }
melin-protocol = { path = "../protocol" }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"
