[package]
name = "melin-bench"
version = "0.5.0"
edition = "2024"

[features]
## Default mirrors `melin-server`'s default set so plain `cargo run -p
## melin-bench` behaves like a stock server build. Disable individual
## features with `--no-default-features --features=...` to benchmark
## without trading, hash-chain, or release-tracing.
default = ["trading", "hash-chain", "release-tracing"]
## Forward to `melin-server/trading` (real matching engine).
trading = ["melin-server/trading"]
## Forward to `melin-server/hash-chain` (BLAKE3 tamper-evident journal
## chain — adds ~15-30 ns per event).
hash-chain = ["melin-server/hash-chain"]
## Forward to `melin-server/release-tracing` (compile out debug!/trace!).
release-tracing = ["melin-server/release-tracing"]
## Transport-only noop app — mutually exclusive with `trading` at the
## server level. Use `--no-default-features --features=noop` to bench
## the pipeline without the matching engine.
noop = ["melin-server/noop"]
no-persist = ["melin-server/no-persist"]
latency-trace = ["melin-server/latency-trace"]
## Kept for backward compatibility — io_uring is now always used.
io-uring = []
dpdk = ["dep:melin-dpdk", "melin-dpdk/dpdk-sys", "dep:smoltcp"]
## Single-client rumcast roundtrip mode for the LAN bench suite.
## Mutually exclusive with `dpdk` at build time. Mirrors the server's
## `--features rumcast` path.
## Pulls in `melin-server/rumcast` so the bench can spawn an embedded
## rumcast server on loopback when `--addr` is omitted, mirroring how
## the TCP path embeds a server.
rumcast = ["dep:melin-rumcast", "melin-server/rumcast"]
pipeline-stats = ["melin-server/pipeline-stats"]
plot = ["dep:plotters"]

[[bin]]
name = "melin-bench"
path = "src/main.rs"

[[bin]]
name = "melin-plot"
path = "src/plot.rs"
required-features = ["plot"]

[[bin]]
name = "journal_writer_bench"
path = "src/journal_writer_bench.rs"

[dependencies]
melin-engine = { path = "../engine" }
melin-trading = { path = "../trading" }
melin-disruptor = { path = "../disruptor" }
melin-protocol = { path = "../protocol" }
melin-server = { path = "../server", default-features = false }
melin-app = { path = "../app" }
melin-transport-core = { path = "../transport-core" }
base64 = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = "0.3"
hdrhistogram = "7"
rand = "0.9"
libc = { workspace = true }
tikv-jemallocator = { workspace = true }
tracing-subscriber = { workspace = true }
io-uring = "0.7"
melin-dpdk = { path = "../dpdk", optional = true }
melin-rumcast = { path = "../rumcast", optional = true, features = ["io-uring"] }
smoltcp = { version = "0.13", default-features = false, features = ["std", "medium-ethernet", "proto-ipv4", "socket-tcp"], optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
plotters = { version = "0.3", optional = true, default-features = false, features = ["svg_backend", "bitmap_backend", "bitmap_encoder", "ttf", "line_series"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
