[package]
name = "melin-dpdk"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable when libdpdk is installed. Without this feature the crate
# compiles as an empty shell — no bindgen, no C compilation, no linking.
dpdk-sys = ["dep:libc", "dep:bindgen", "dep:pkg-config", "dep:cc"]

[dependencies]
# Userspace TCP/IP stack — replaces the kernel TCP stack when using DPDK.
# `std` feature needed for smoltcp to link against system time; `medium-ethernet`
# for Ethernet frame processing; `proto-ipv4` + `socket-tcp` for TCP/IPv4.
smoltcp = { version = "0.13", default-features = false, features = [
    "std",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-tcp-zero-copy-rx",
    "log",
] }
tracing = "0.1"
libc = { version = "0.2", optional = true }

[build-dependencies]
# bindgen generates Rust FFI bindings from DPDK C headers at build time.
# Requires DPDK to be installed (pkg-config --cflags --libs libdpdk).
bindgen = { version = "0.71", optional = true }
pkg-config = { version = "0.3", optional = true }
# cc compiles the C wrapper functions for DPDK inline functions.
cc = { version = "1", optional = true }
