[package]
name = "melin-engine"
version = "0.1.0"
edition = "2024"

[features]
## Skip all fsync calls in the journal writer. Unsafe for production — data
## will not survive crashes — but useful for benchmarking to isolate I/O cost.
no-fsync = []
## Skip all journal I/O (no writes, no fsync). Implies `no-fsync`. Unsafe for
## production — nothing is persisted — but useful for benchmarking to measure
## pure pipeline + matching latency without any disk I/O.
no-persist = ["no-fsync"]
## Record per-stage latency histograms and print a summary on shutdown.
## Adds ~20ns of clock overhead per event. Not for production.
latency-trace = ["dep:hdrhistogram"]
## Enable io_uring-based overlapped journal writes. The journal stage submits
## Write+RWF_DSYNC SQEs and accumulates the next batch while the NVMe FUA
## write is in flight (double-buffering). Requires Linux 5.6+.
io-uring = ["dep:io-uring"]
## Print per-stage busy/idle utilization on shutdown. Identifies the pipeline
## bottleneck: the stage closest to 100% busy is the constraint.
pipeline-stats = []
## BLAKE3 tamper-evident hash chain. Hashes every journal entry into a
## cryptographic chain verified at checkpoints. Catches deliberate tampering
## (not just corruption — CRC32C handles that). Adds ~15-30ns per event.
## Disable for maximum throughput when audit tamper-evidence is not required.
hash-chain = ["dep:blake3"]

default = []

[dependencies]
blake3 = { version = "1", optional = true }
rustc-hash = "2"
crc32c = "0.6"
getrandom = "0.3"
hdrhistogram = { version = "7", optional = true }
io-uring = { version = "0.7", optional = true }
libc = { workspace = true }
tracing = { workspace = true }
melin-disruptor = { path = "../disruptor" }
astenn = { git = "ssh://git@github.com/pierre-l/astenn.git" }

[dev-dependencies]
bolero = "0.13"
proptest = "1"
tempfile = "3"
