[package]
name = "melin-fix-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "melin-fix-gateway"
path = "src/main.rs"

[dependencies]
melin-protocol = { path = "../protocol" }
melin-engine = { path = "../engine" }
ed25519-dalek = { workspace = true }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
io-uring = "0.7"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
proptest = "1"
