[package]
name = "melin-journal"
version = "0.5.0"
edition = "2024"

[lib]
name = "melin_journal"
path = "src/lib.rs"

[features]
## BLAKE3 tamper-evident hash chain. Hashes every journal entry into a
## cryptographic chain verified at checkpoints. Catches deliberate
## tampering (CRC32C only catches corruption). Adds ~15-30 ns per event.
hash-chain = ["dep:blake3"]
## Record per-stage latency histograms. Adds ~20 ns of clock overhead
## per event; not for production. Consumed by pipeline stages downstream.
latency-trace = ["dep:hdrhistogram"]

[dependencies]
blake3 = { version = "1", optional = true }
crc32c = "0.6"
getrandom = "0.3"
hdrhistogram = { version = "7", optional = true }
io-uring = "0.7"
libc = { workspace = true }
# Safe wrappers for `pwrite`, `pwritev2`, `fallocate` so the journal hot
# path can drop the corresponding `unsafe { libc::… }` blocks. Already
# transitively in the workspace dep tree.
rustix = { version = "1", features = ["fs"] }
tracing = { workspace = true }
# Typed views over raw byte buffers for the on-disk frame layout —
# replaces field-by-field le::put / le::get chains with single struct
# read/writes. derive feature for `FromBytes` / `IntoBytes`.
zerocopy = { version = "0.8", features = ["derive", "alloc"] }
melin-app = { path = "../app" }
melin-disruptor = { path = "../disruptor" }

[dev-dependencies]
tempfile = "3"
