[package]
name = "melin-journal"
version = "0.7.0"
edition = "2024"

[lib]
name = "melin_journal"
path = "src/lib.rs"

[features]
## BLAKE3 tamper-evident hash chain. Hashes every journal entry into a
## cryptographic chain verified at checkpoints. Catches deliberate
## tampering (CRC32C only catches corruption). Adds ~15-30 ns per event.
hash-chain = ["dep:blake3"]
## Open the journal *without* `O_DIRECT`. Writes still go through the
## same sector-aligned path but land in the kernel page cache instead
## of bypassing it. For benchmarking on consumer NVMe drives that lack
## Power Loss Protection — every O_DIRECT submit on those drives pays
## the full device-side latency. Production deployments on PLP drives
## must leave this off; with `no-o-direct` enabled, durability becomes
## best-effort (no per-batch flush).
no-o-direct = []
## Expose `test_utils` hooks used by consuming crates' tests — notably
## an in-process override for the prealloc chunk size, so recovery
## stress tests avoid the 256 MiB fallocate per iteration. Activate
## from `[dev-dependencies]` only; production builds must leave this off.
test-utils = []

[dependencies]
blake3 = { version = "1", optional = true }
crc32c = "0.6"
getrandom = "0.3"
io-uring = "0.7"
libc = { workspace = true }
# Safe wrappers for `pwrite`, `pwritev2`, `fallocate` so the journal hot
# path can drop the corresponding `unsafe { libc::… }` blocks. Already
# transitively in the workspace dep tree.
rustix = { version = "1", features = ["fs"] }
tracing = { workspace = true }
# Typed views over raw byte buffers for the on-disk frame layout —
# replaces field-by-field le::put / le::get chains with single struct
# read/writes. derive feature for `FromBytes` / `IntoBytes`.
zerocopy = { version = "0.8", features = ["derive", "alloc"] }
melin-app = { path = "../app" }
melin-disruptor = { path = "../disruptor" }
memmap2 = "0.9.10"

[dev-dependencies]
tempfile = "3"
