[package]
name = "melin-market-data"
version = "0.3.0"
edition = "2024"

[dependencies]
melin-engine = { path = "../engine" }
melin-trading = { path = "../trading" }
melin-protocol = { path = "../protocol" }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1"
