[package]
name = "melin-md-gateway"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "melin-md-gateway"
path = "src/main.rs"

[dependencies]
melin-gateway-core = { path = "../gateway-core" }
melin-market-data = { path = "../market-data" }
melin-protocol = { path = "../protocol" }
melin-engine = { path = "../engine" }
melin-trading = { path = "../trading" }
ed25519-dalek = { workspace = true }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
io-uring = "0.7"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
