[package]
name = "melin-protocol"
version = "0.1.0"
edition = "2024"

[features]
latency-trace = ["melin-engine/latency-trace"]

[dependencies]
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
melin-engine = { path = "../engine" }

[dev-dependencies]
bolero = "0.13"
tempfile = "3"
