[package]
name = "melin-protocol"
version = "0.5.0"
edition = "2024"

[features]
latency-trace = []

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
# Typed views over raw byte buffers for the wire frame header —
# replaces hand-rolled le::put / le::get pairs. derive feature for
# `FromBytes` / `IntoBytes`.
zerocopy = { version = "0.8", features = ["derive"] }
melin-trading = { path = "../trading" }
x25519-dalek = { workspace = true }

[dev-dependencies]
bolero = "0.13"
tempfile = "3"
