[package]
name = "melin-rumcast"
version = "0.4.0"
edition = "2024"

[lib]
name = "melin_rumcast"
path = "src/lib.rs"

[dependencies]
# Zero-copy decode of frame headers from received UDP packets. Headers are
# read on every packet on the hot path, so we want a `&[u8] -> &Header` cast
# rather than per-field byte copies. bytemuck's `Pod`/`Zeroable` derives give
# us the alignment + no-padding guarantees safely. Tiny dep, no transitive
# deps, well-maintained.
bytemuck = { version = "1", features = ["derive"] }
# SO_RCVBUF tuning via setsockopt — std::net::UdpSocket exposes no
# direct API, so we go through libc for the few callers (resp socket
# on the server) that need a larger kernel recv buffer to absorb SM
# bursts without dropping NAKs.
libc = { workspace = true }
# Structured logging for the rare error paths (e.g. io_uring submit
# failures in `park`). Workspace pin — keeps the crate's dep
# footprint minimal while letting the embedder's subscriber capture.
tracing = { workspace = true }
# io_uring backend for event-driven recv without per-packet recvfrom
# syscalls — enables IoUringUdp and SharedUdp<IoUringUdp>.
io-uring = { version = "0.7", optional = true }

[features]
io-uring = ["dep:io-uring"]
