[package]
name = "melin-server"
version = "0.1.0"
edition = "2024"

[features]
default = ["melin-engine/hash-chain", "release-tracing"]
## Compile out debug! and trace! macros at build time. Eliminates the
## tracing filter check (~5-10ns) on every call site in the hot path.
## Disable with --no-default-features to get RUST_LOG=debug back.
release-tracing = ["tracing/max_level_info"]
## Skip all fsync calls and journal-cursor gating in the response stage.
## Unsafe for production — data may not survive crashes — but useful for
## benchmarking to isolate I/O cost from pipeline latency.
no-fsync = ["melin-engine/no-fsync"]
no-persist = ["melin-engine/no-persist"]
latency-trace = ["melin-engine/latency-trace", "melin-protocol/latency-trace"]
## Kept for backward compatibility — io_uring is now always used.
io-uring = []
dpdk = ["dep:melin-dpdk", "melin-dpdk/dpdk-sys"]
pipeline-stats = ["melin-engine/pipeline-stats"]

[lib]
name = "melin_server"
path = "src/lib.rs"

[[bin]]
name = "melin-server"
path = "src/main.rs"

[dependencies]
melin-engine = { path = "../engine" }
melin-disruptor = { path = "../disruptor" }
melin-protocol = { path = "../protocol" }
blake3 = "1"
clap = { workspace = true }
crc32c = "0.6"
ed25519-dalek = { workspace = true }
getrandom = "0.3"
libc = { workspace = true }
rustc-hash = "2"
rand = { workspace = true }
tracing = { workspace = true }
tikv-jemallocator = { workspace = true }
tracing-subscriber = { workspace = true }
io-uring = "0.7"
melin-dpdk = { path = "../dpdk", optional = true }

[dev-dependencies]
tempfile = "3"
melin-client = { path = "../client" }
melin-protocol = { path = "../protocol" }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
serial_test = "3"
