[package]
name = "melin-server"
version = "0.7.0"
edition = "2024"

[features]
## Default build: trading engine + release tracing + hash-chain journal.
default = ["trading", "hash-chain", "release-tracing"]
## Compile out debug! and trace! macros at build time. Eliminates the
## tracing filter check (~5-10ns) on every call site in the hot path.
## Disable with --no-default-features to get RUST_LOG=debug back.
release-tracing = ["tracing/max_level_info"]
## App selection: `trading` is the real matching engine,
## `skip-order-exec` short-circuits `Exchange::execute` to a single
## rejection (used to isolate transport throughput from matching cost).
## Exactly one must be enabled. `melin-market-data` is trading-only and
## piggy-backs on `trading`. The skip-order-exec build still links
## `melin-engine` — every `SubmitOrder` is bypassed by the engine's
## `skip-order-exec` feature so the matching hot path is never
## exercised.
trading = ["dep:melin-market-data"]
skip-order-exec = ["melin-engine/skip-order-exec", "hash-chain", "release-tracing"]
no-persist = ["melin-engine/no-persist", "melin-transport-core/no-persist"]
## Lightweight per-stage histograms for the original 4 stages
## (journal/matching wakeup + execute, journal batch). Adds ~3-5 mutex
## locks per event on the hot path; appropriate for narrow debugging
## ("is the journal stage slow?"). Production builds must leave this
## off — slot sizes grow by 16 bytes per InputSlot/OutputSlot to carry
## the trace timestamps.
latency-trace = [
    "melin-engine/latency-trace",
    "melin-transport-core/latency-trace",
    "melin-protocol/latency-trace",
]
## Full tick-to-trade decomposition: adds 5 commercial-grade stages
## on top of latency-trace (reader: ingest, response: journal-wait,
## replica-wait, encode, egress) plus the GateCrossTracker. Roughly
## doubles the hot-path mutex traffic vs latency-trace alone, so opt
## into it explicitly when you want the breakdown — bench-side runs
## that produce the README-style decomposition table need this flag.
tick-to-trade = ["latency-trace"]
## Kept for backward compatibility — io_uring is now always used.
io-uring = []
dpdk = ["dep:melin-dpdk", "melin-dpdk/dpdk-sys"]
pipeline-stats = ["melin-engine/pipeline-stats", "melin-transport-core/pipeline-stats"]
hash-chain = [
    "melin-engine/hash-chain",
    "melin-journal/hash-chain",
    "melin-transport-core/hash-chain",
]
## Open the journal without `O_DIRECT`. Passthrough — see the
## `melin-journal` feature of the same name. Benchmarking only.
no-o-direct = [
    "melin-engine/no-o-direct",
    "melin-journal/no-o-direct",
    "melin-transport-core/no-o-direct",
]

[lib]
name = "melin_server"
path = "src/lib.rs"

[[bin]]
name = "melin-server"
path = "src/main.rs"

[[bin]]
name = "melin-replication-bench"
path = "src/bin/replication-bench.rs"
required-features = ["skip-order-exec"]

[dependencies]
melin-app = { path = "../app" }
melin-engine = { path = "../engine" }
melin-journal = { path = "../journal" }
melin-trading = { path = "../trading" }
melin-transport-core = { path = "../transport-core" }
melin-types = { path = "../types" }
melin-disruptor = { path = "../disruptor" }
melin-market-data = { path = "../market-data", optional = true }
melin-protocol = { path = "../protocol" }
blake3 = "1"
clap = { workspace = true }
base64 = { workspace = true }
crc32c = "0.6"
ed25519-dalek = { workspace = true }
getrandom = "0.3"
libc = { workspace = true }
rustc-hash = "2"
rand = { workspace = true }
tracing = { workspace = true }
tikv-jemallocator = { workspace = true }
tracing-subscriber = { workspace = true }
io-uring = "0.7"
# Typed views over raw byte buffers for replication control frames —
# replaces hand-rolled extend_from_slice / try_into chains. derive
# feature for `FromBytes` / `IntoBytes`.
zerocopy = { version = "0.8", features = ["derive"] }
melin-dpdk = { path = "../dpdk", optional = true }

[dev-dependencies]
tempfile = "3"
melin-client = { path = "../client" }
melin-protocol = { path = "../protocol" }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
serial_test = "3"
proptest = "1"
